--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ lintuinfluencer_charfreq.txt
 lintuinfluencer_errorlog.txt
 twitteraccess.txt
 lintuinfluencer-5845e6883765.json
+lintuinfluencer_dataanalysis.xlsx
